<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

<TextView
    android:id="@+id/txtNome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/txtNome"/>
<EditText
    android:id="@+id/edtNome"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtEndereco"/>
    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtBairro"/>
    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/txtCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtCep"/>
    <EditText
        android:id="@+id/edtCep"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnCadastrar"/>

</LinearLayout>